--- a/src/app/site.module.css
+++ b/src/app/site.module.css
@@ -1,9 +1,13 @@
 .site {
-	background-color: var(--site-background-color);
+	background: var(--site-background-color);
 	color: var(--text-color);
 	height: 100vh;
 	width: 100vw;
 	position: relative;
+
+	& main {
+		z-index: 1;
+	}
 }
 
 .borderImages {
